typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            85,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts:3:6
  |
3 |     [a ? "" : ""]() {}
  |      ^

